basic tabs with minor styling

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,9 +15,12 @@
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".TabContentActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
     </application>
 
